--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body{
     
     height: 550px;
     max-width: 430px;
-    background: linear-gradient(135deg,#00feba,#5b548a);
+    background: linear-gradient(135deg,#4e9a8607,#5b548a);
     color: #fff;
     padding: 40px 35px;
     border-radius: 20px;
     margin: 20px;
     text-align: center;
-      box-shadow: 0 0 20px rgba(240, 238, 238, 0.5);
+      box-shadow: 0 0 20px rgba(149, 63, 95, 0.5);
     /* width: 100%;
     max-width: 430px;
     background: linear-gradient(135deg,#00feba,#5b548a);
@@ -37,6 +37,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center; */
+   
 
 
 
@@ -77,6 +78,8 @@ body{
     width: 19px;
 }
 
+
+
 .weather-icon{
     width: 170px;
     margin-top: 30px;
@@ -103,12 +106,13 @@ body{
 
 .col{
     display: flex;
+    
     align-items: center;
     text-align: left;
 }
 .col img{
-    width: 30px;
-    margin-right: 10px;
+    width: 45px;
+    margin-right: 20px;
 }
 .humidity, .wind{
     font-size: 28px;
